--- a/deliverables/ocata/cliff.yaml
+++ b/deliverables/ocata/cliff.yaml
@@ -3,16 +3,16 @@ launchpad: python-cliff
 team: OpenStackClient
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/ocata
-  location: 2.4.0
+  - name: stable/ocata
+    location: 2.4.0
 releases:
-- version: 2.3.0
-  projects:
-  - repo: openstack/cliff
-    hash: 4c367b433bb53c8ef23e7ea737260b0695cc2735
-- version: 2.4.0
-  projects:
-  - repo: openstack/cliff
-    hash: 1dd3edafab1a34d194c4510310653ad7e2cbb582
+  - version: 2.3.0
+    projects:
+      - repo: openstack/cliff
+        hash: 4c367b433bb53c8ef23e7ea737260b0695cc2735
+  - version: 2.4.0
+    projects:
+      - repo: openstack/cliff
+        hash: 1dd3edafab1a34d194c4510310653ad7e2cbb582
