--- a/deliverables/newton/automaton.yaml
+++ b/deliverables/newton/automaton.yaml
@@ -3,17 +3,17 @@ launchpad: automaton
 team: oslo
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/newton
-  location: 1.4.0
+  - name: stable/newton
+    location: 1.4.0
 releases:
-- version: 1.3.0
-  projects:
-  - repo: openstack/automaton
-    hash: 40088148197f6530560b585ff0cbf3e6ffe88aca
-- version: 1.4.0
-  projects:
-  - repo: openstack/automaton
-    hash: c6278ba1a8167447a5f52bdb92c2790abc5d0f87
-  highlights: '- Add Python 3.5 classifier and venv'
+  - version: 1.3.0
+    projects:
+      - repo: openstack/automaton
+        hash: 40088148197f6530560b585ff0cbf3e6ffe88aca
+  - version: 1.4.0
+    projects:
+      - repo: openstack/automaton
+        hash: c6278ba1a8167447a5f52bdb92c2790abc5d0f87
+    highlights: '- Add Python 3.5 classifier and venv'
