--- a/deliverables/newton/oslo.cache.yaml
+++ b/deliverables/newton/oslo.cache.yaml
@@ -3,47 +3,47 @@ launchpad: oslo.cache
 team: oslo
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 release-notes: https://docs.openstack.org/releasenotes/oslo.cache/newton.html
 branches:
-- name: stable/newton
-  location: 1.14.0
+  - name: stable/newton
+    location: 1.14.0
 releases:
-- version: 1.7.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: d51ce5a9947a6d80bc1d495a2e25bf0939cae275
-- version: 1.8.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: 6251a1554c23d9a421a5819e4ec79bcbe08d5310
-- version: 1.9.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: f6108b0b6603743a3dd56dcbc0f0a2590ddb5fe7
-- version: 1.10.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: 48ee6eb36dd895c518db39d6f2d799038cc37b02
-  highlights: '* Use entrypoints for backends'
-- version: 1.11.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: 86bcd66f6b3359456e280b23db7d9cd1670b2804
-- version: 1.12.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: 3009e5f7be5ea8ecf050e7dea924cc95c3996b35
-  highlights: '- Add Python 3.5 classifier and venv'
-- version: 1.13.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: 6e9f7226c86f110e3b537eeeaf5f61e9edc355f2
-- version: 1.14.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: f6ea719fbd1e685f6e268783be2a1464f9fabaa1
-- version: 1.14.1
-  projects:
-  - repo: openstack/oslo.cache
-    hash: ff5bbb96d73a83c1e25759c42a30f01608de5b8a
+  - version: 1.7.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: d51ce5a9947a6d80bc1d495a2e25bf0939cae275
+  - version: 1.8.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: 6251a1554c23d9a421a5819e4ec79bcbe08d5310
+  - version: 1.9.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: f6108b0b6603743a3dd56dcbc0f0a2590ddb5fe7
+  - version: 1.10.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: 48ee6eb36dd895c518db39d6f2d799038cc37b02
+    highlights: '* Use entrypoints for backends'
+  - version: 1.11.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: 86bcd66f6b3359456e280b23db7d9cd1670b2804
+  - version: 1.12.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: 3009e5f7be5ea8ecf050e7dea924cc95c3996b35
+    highlights: '- Add Python 3.5 classifier and venv'
+  - version: 1.13.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: 6e9f7226c86f110e3b537eeeaf5f61e9edc355f2
+  - version: 1.14.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: f6ea719fbd1e685f6e268783be2a1464f9fabaa1
+  - version: 1.14.1
+    projects:
+      - repo: openstack/oslo.cache
+        hash: ff5bbb96d73a83c1e25759c42a30f01608de5b8a
