--- a/deliverables/newton/oslo.policy.yaml
+++ b/deliverables/newton/oslo.policy.yaml
@@ -3,51 +3,51 @@ launchpad: oslo.policy
 team: oslo
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 release-notes: https://docs.openstack.org/releasenotes/oslo.policy/newton.html
 branches:
-- name: stable/newton
-  location: 1.14.0
+  - name: stable/newton
+    location: 1.14.0
 releases:
-- version: 1.7.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 93aee73d37fcaf47fd97991711a1e48a566dcc78
-  highlights: '* Support policy file in YAML'
-- version: 1.8.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 5a8969c97ba637a609aa98fbdd93137874e6e7d3
-- version: 1.9.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 474c120ae6de61c1f46523baa0fef11b5e537cf8
-  highlights: |-
-    * Add equality operator to policy.RuleDefault
-    * Add policy registration and authorize method
-    * Add sample file generation script and helper methods
-- version: 1.10.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 6aa8551aa4c03e3fd39d79d6c6bdc43ffe7bf2fc
-- version: 1.11.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: db9711de557c168e828bcf83afadbc82d5a10ff9
-- version: 1.12.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: cbb0824b56397adf8f93153083a49921c0d82f98
-- version: 1.13.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 10a81baefa25dd25d6acb8c2ad6ba3bcc868c82b
-  highlights: |-
-    - Add Python 3.5 classifier and venv
-    - Debug logging for policy file validation
-    - Add note about not all APIs support policy enforcement by user_id
-- version: 1.14.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 804be5979569cc64dfef2ac2b6bc0c040d313aa0
-  highlights: '* Allow policy file to not exist'
+  - version: 1.7.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 93aee73d37fcaf47fd97991711a1e48a566dcc78
+    highlights: '* Support policy file in YAML'
+  - version: 1.8.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 5a8969c97ba637a609aa98fbdd93137874e6e7d3
+  - version: 1.9.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 474c120ae6de61c1f46523baa0fef11b5e537cf8
+    highlights: |-
+      * Add equality operator to policy.RuleDefault
+      * Add policy registration and authorize method
+      * Add sample file generation script and helper methods
+  - version: 1.10.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 6aa8551aa4c03e3fd39d79d6c6bdc43ffe7bf2fc
+  - version: 1.11.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: db9711de557c168e828bcf83afadbc82d5a10ff9
+  - version: 1.12.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: cbb0824b56397adf8f93153083a49921c0d82f98
+  - version: 1.13.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 10a81baefa25dd25d6acb8c2ad6ba3bcc868c82b
+    highlights: |-
+      - Add Python 3.5 classifier and venv
+      - Debug logging for policy file validation
+      - Add note about not all APIs support policy enforcement by user_id
+  - version: 1.14.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 804be5979569cc64dfef2ac2b6bc0c040d313aa0
+    highlights: '* Allow policy file to not exist'
