--- a/deliverables/newton/oslo.serialization.yaml
+++ b/deliverables/newton/oslo.serialization.yaml
@@ -3,54 +3,54 @@ launchpad: oslo.serialization
 team: oslo
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/newton
-  location: 2.13.0
+  - name: stable/newton
+    location: 2.13.0
 releases:
-- version: 2.5.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 8985675d98fd468e15a34707ec090f704b9a7761
-  highlights: '* Unified and simplified API for all serializers'
-- version: 2.6.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 8a7106162523fea13b55a047a9eb0f49bb6e574b
-- version: 2.7.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 0dcd9271631b2931eb37ce59b184f42c8cd9078e
-- version: 2.8.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 4fdaeff758c3a95cdbf99976b87cad42215307b6
-  highlights: |-
-    * Replace TypeError by ValueError in msgpackutils (so that it matches
-    jsonutils)
-- version: 2.9.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 0aa16384082a340fbcbe519255ed6dd83d8cad8d
-- version: 2.10.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 23866b6d6c1aed7fa3548321c878295e5703c6fd
-- version: 2.11.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 7ad9a958008fc5ee442f6de3d0e6a756d62b6115
-- version: 2.12.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: afb53323a1eb751fd1f8a542414a284902cb8f70
-  highlights: '- Add Python 3.5 classifier and venv'
-- version: 2.13.0
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: 1f86a66a364398133fa3e7c473ae974e0ac41d04
-  highlights: '* Fix serialization of binary strings in Python3'
-- version: 2.13.1
-  projects:
-  - repo: openstack/oslo.serialization
-    hash: be02fdbebc2d9f92a959aa34e0cb5a30934dfa0d
+  - version: 2.5.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 8985675d98fd468e15a34707ec090f704b9a7761
+    highlights: '* Unified and simplified API for all serializers'
+  - version: 2.6.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 8a7106162523fea13b55a047a9eb0f49bb6e574b
+  - version: 2.7.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 0dcd9271631b2931eb37ce59b184f42c8cd9078e
+  - version: 2.8.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 4fdaeff758c3a95cdbf99976b87cad42215307b6
+    highlights: |-
+      * Replace TypeError by ValueError in msgpackutils (so that it matches
+      jsonutils)
+  - version: 2.9.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 0aa16384082a340fbcbe519255ed6dd83d8cad8d
+  - version: 2.10.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 23866b6d6c1aed7fa3548321c878295e5703c6fd
+  - version: 2.11.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 7ad9a958008fc5ee442f6de3d0e6a756d62b6115
+  - version: 2.12.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: afb53323a1eb751fd1f8a542414a284902cb8f70
+    highlights: '- Add Python 3.5 classifier and venv'
+  - version: 2.13.0
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: 1f86a66a364398133fa3e7c473ae974e0ac41d04
+    highlights: '* Fix serialization of binary strings in Python3'
+  - version: 2.13.1
+    projects:
+      - repo: openstack/oslo.serialization
+        hash: be02fdbebc2d9f92a959aa34e0cb5a30934dfa0d
