--- a/deliverables/newton/stevedore.yaml
+++ b/deliverables/newton/stevedore.yaml
@@ -3,41 +3,40 @@ launchpad: stevedore
 team: oslo
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/newton
-  location: 1.17.1
+  - name: stable/newton
+    location: 1.17.1
 releases:
-- version: 1.13.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 52dfe21ade9746b62393fc6ebf9b157563778a8e
-- version: 1.14.0
-  projects:
-  - repo: openstack/stevedore
-    hash: b106ba3fc6cfcc79740af144984863d7f6192417
-- version: 1.15.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 01b09a5c1d683007d86fec09594db9f5787805f3
-- version: 1.16.0
-  projects:
-  - repo: openstack/stevedore
-    hash: f68325fc481a0cc2a9aa9e8b1701cdb092463b49
-  highlights: |-
-    * Fix broken link about setuptools entry points
-    * NamedExtensionManager: call a callback when some names cannot be found
-    * Fix NamedExtensionManager fails when loading failing extension in order
-- version: 1.17.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 0c6b78cf88378e497050553e02d5367500613e73
-  highlights: |-
-    - Add Python 3.5 classifier and venv
-    - Make error reporting for extension loading quieter
-- version: 1.17.1
-  projects:
-  - repo: openstack/stevedore
-    hash: 62398ed4a3376b52e0934a9e23b88bea60404972
-  highlights: |-
-    - Fixed bug 1611387 to not emit warnings when loading hooks by default.
+  - version: 1.13.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 52dfe21ade9746b62393fc6ebf9b157563778a8e
+  - version: 1.14.0
+    projects:
+      - repo: openstack/stevedore
+        hash: b106ba3fc6cfcc79740af144984863d7f6192417
+  - version: 1.15.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 01b09a5c1d683007d86fec09594db9f5787805f3
+  - version: 1.16.0
+    projects:
+      - repo: openstack/stevedore
+        hash: f68325fc481a0cc2a9aa9e8b1701cdb092463b49
+    highlights: |-
+      * Fix broken link about setuptools entry points
+      * NamedExtensionManager: call a callback when some names cannot be found
+      * Fix NamedExtensionManager fails when loading failing extension in order
+  - version: 1.17.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 0c6b78cf88378e497050553e02d5367500613e73
+    highlights: |-
+      - Add Python 3.5 classifier and venv
+      - Make error reporting for extension loading quieter
+  - version: 1.17.1
+    projects:
+      - repo: openstack/stevedore
+        hash: 62398ed4a3376b52e0934a9e23b88bea60404972
+    highlights: '- Fixed bug 1611387 to not emit warnings when loading hooks by default.'
