--- a/deliverables/ocata/oslo.cache.yaml
+++ b/deliverables/ocata/oslo.cache.yaml
@@ -4,20 +4,20 @@ team: oslo
 release-notes: https://docs.openstack.org/releasenotes/oslo.cache/ocata.html
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/ocata
-  location: 1.17.0
+  - name: stable/ocata
+    location: 1.17.0
 releases:
-- version: 1.15.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: fed5068270637fb49fd0d7a1cc9fbb8ff2ea15cd
-- version: 1.16.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: 4943ce9620aae3813802d44d5f1473b61fa0c483
-- version: 1.17.0
-  projects:
-  - repo: openstack/oslo.cache
-    hash: eeb787db7439f057eb48fa80cb0e28752e7ea8a8
+  - version: 1.15.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: fed5068270637fb49fd0d7a1cc9fbb8ff2ea15cd
+  - version: 1.16.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: 4943ce9620aae3813802d44d5f1473b61fa0c483
+  - version: 1.17.0
+    projects:
+      - repo: openstack/oslo.cache
+        hash: eeb787db7439f057eb48fa80cb0e28752e7ea8a8
