--- a/deliverables/ocata/oslo.db.yaml
+++ b/deliverables/ocata/oslo.db.yaml
@@ -4,28 +4,28 @@ team: oslo
 release-notes: https://docs.openstack.org/releasenotes/oslo.db/ocata.html
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/ocata
-  location: 4.17.0
+  - name: stable/ocata
+    location: 4.17.0
 releases:
-- version: 4.14.0
-  projects:
-  - repo: openstack/oslo.db
-    hash: 21a5c42f7ac9b3bfa97afdd7e9893f5414d39cd4
-- version: 4.15.0
-  projects:
-  - repo: openstack/oslo.db
-    hash: e03b0dd06940a9262d90ec2699a4452835c05b56
-- version: 4.16.0
-  projects:
-  - repo: openstack/oslo.db
-    hash: e8e2421f8bc7ae861061bc5cef89934e0bccfdaf
-- version: 4.17.0
-  projects:
-  - repo: openstack/oslo.db
-    hash: 5095c7c16c90df3fc6d3eb1ee31b6ac291b77df6
-- version: 4.17.1
-  projects:
-  - repo: openstack/oslo.db
-    hash: b2eec440b212c6d0f19e38ec8b92a1fed8636167
+  - version: 4.14.0
+    projects:
+      - repo: openstack/oslo.db
+        hash: 21a5c42f7ac9b3bfa97afdd7e9893f5414d39cd4
+  - version: 4.15.0
+    projects:
+      - repo: openstack/oslo.db
+        hash: e03b0dd06940a9262d90ec2699a4452835c05b56
+  - version: 4.16.0
+    projects:
+      - repo: openstack/oslo.db
+        hash: e8e2421f8bc7ae861061bc5cef89934e0bccfdaf
+  - version: 4.17.0
+    projects:
+      - repo: openstack/oslo.db
+        hash: 5095c7c16c90df3fc6d3eb1ee31b6ac291b77df6
+  - version: 4.17.1
+    projects:
+      - repo: openstack/oslo.db
+        hash: b2eec440b212c6d0f19e38ec8b92a1fed8636167
