--- a/deliverables/ocata/oslo.privsep.yaml
+++ b/deliverables/ocata/oslo.privsep.yaml
@@ -4,20 +4,20 @@ team: oslo
 release-notes: https://docs.openstack.org/releasenotes/oslo.privsep/ocata.html
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/ocata
-  location: 1.16.0
+  - name: stable/ocata
+    location: 1.16.0
 releases:
-- version: 1.14.0
-  projects:
-  - repo: openstack/oslo.privsep
-    hash: 9dab41120e446fa6adf587ea90513742a8a1c2b1
-- version: 1.15.0
-  projects:
-  - repo: openstack/oslo.privsep
-    hash: 8c2c6b254a61a6614ef6910618b7b11af0c7cebd
-- version: 1.16.0
-  projects:
-  - repo: openstack/oslo.privsep
-    hash: 2208a539ee0f6e2f4d549cbbdafef20ac1225da3
+  - version: 1.14.0
+    projects:
+      - repo: openstack/oslo.privsep
+        hash: 9dab41120e446fa6adf587ea90513742a8a1c2b1
+  - version: 1.15.0
+    projects:
+      - repo: openstack/oslo.privsep
+        hash: 8c2c6b254a61a6614ef6910618b7b11af0c7cebd
+  - version: 1.16.0
+    projects:
+      - repo: openstack/oslo.privsep
+        hash: 2208a539ee0f6e2f4d549cbbdafef20ac1225da3
