--- a/deliverables/ocata/oslosphinx.yaml
+++ b/deliverables/ocata/oslosphinx.yaml
@@ -4,24 +4,24 @@ team: oslo
 release-notes: https://docs.openstack.org/releasenotes/oslosphinx/ocata.html
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/ocata
-  location: 4.10.0
+  - name: stable/ocata
+    location: 4.10.0
 releases:
-- version: 4.8.0
-  projects:
-  - repo: openstack/oslosphinx
-    hash: b82f250c2ffe58a56c53cd7a666a15f649196877
-- version: 4.9.0
-  projects:
-  - repo: openstack/oslosphinx
-    hash: 07323255f93a359a296052ad6531490a04635a1f
-- version: 4.10.0
-  projects:
-  - repo: openstack/oslosphinx
-    hash: a45542eadbdeb84bb06439cd13c22b6f875761a1
-- version: 4.10.1
-  projects:
-  - repo: openstack/oslosphinx
-    hash: e76926e0440cb97e73d6e85ad77993dc55c88877
+  - version: 4.8.0
+    projects:
+      - repo: openstack/oslosphinx
+        hash: b82f250c2ffe58a56c53cd7a666a15f649196877
+  - version: 4.9.0
+    projects:
+      - repo: openstack/oslosphinx
+        hash: 07323255f93a359a296052ad6531490a04635a1f
+  - version: 4.10.0
+    projects:
+      - repo: openstack/oslosphinx
+        hash: a45542eadbdeb84bb06439cd13c22b6f875761a1
+  - version: 4.10.1
+    projects:
+      - repo: openstack/oslosphinx
+        hash: e76926e0440cb97e73d6e85ad77993dc55c88877
