--- a/deliverables/pike/mox3.yaml
+++ b/deliverables/pike/mox3.yaml
@@ -1,22 +1,22 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-mox3
 release-model: cycle-with-intermediary
 team: oslo
 type: library
 releases:
-- version: 0.21.0
-  projects:
-  - repo: openstack/mox3
-    hash: c9f88a280d902a44686412e73a44106cd299f9e5
-- version: 0.22.0
-  projects:
-  - repo: openstack/mox3
-    hash: 8536be786ca5b1a87e3fafb056d5bb5d4cee4425
-- version: 0.23.0
-  projects:
-  - repo: openstack/mox3
-    hash: 812983a5fafc8a09e7b9fffbee5336fafab9b231
+  - version: 0.21.0
+    projects:
+      - repo: openstack/mox3
+        hash: c9f88a280d902a44686412e73a44106cd299f9e5
+  - version: 0.22.0
+    projects:
+      - repo: openstack/mox3
+        hash: 8536be786ca5b1a87e3fafb056d5bb5d4cee4425
+  - version: 0.23.0
+    projects:
+      - repo: openstack/mox3
+        hash: 812983a5fafc8a09e7b9fffbee5336fafab9b231
 branches:
-- name: stable/pike
-  location: 0.23.0
+  - name: stable/pike
+    location: 0.23.0
