--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -1,46 +1,46 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: oslo.policy
 release-model: cycle-with-intermediary
 team: oslo
 type: library
 releases:
-- version: 1.19.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 3c3261c072390a81c33641ce5f8ee79970c040dc
-- version: 1.20.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 8ca44b38bdaf49636e1b6fddeda63845aaa26c95
-- version: 1.21.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 395177145622a5c37b8cfb53989084e2ff03ad98
-- version: 1.22.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 51af4de28430f9dce1a0744bc270bffb511be7c1
-- version: 1.22.1
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 6715695f013714c9a5ffe93ec23dd0af8d2b037f
-- version: 1.23.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: deffa995a6bab78fd53ea1f0c31f7ae817759bbb
-- version: 1.24.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: ded939ba7117ad7c919182b9b30152408e4071ce
-- version: 1.24.1
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 5d76e78009018e5bde3154c49cbe6af46dc28b35
-- version: 1.25.0
-  projects:
-  - repo: openstack/oslo.policy
-    hash: 864042c23edad75d26c918bcb23d9f6da3127dcd
+  - version: 1.19.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 3c3261c072390a81c33641ce5f8ee79970c040dc
+  - version: 1.20.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 8ca44b38bdaf49636e1b6fddeda63845aaa26c95
+  - version: 1.21.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 395177145622a5c37b8cfb53989084e2ff03ad98
+  - version: 1.22.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 51af4de28430f9dce1a0744bc270bffb511be7c1
+  - version: 1.22.1
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 6715695f013714c9a5ffe93ec23dd0af8d2b037f
+  - version: 1.23.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: deffa995a6bab78fd53ea1f0c31f7ae817759bbb
+  - version: 1.24.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: ded939ba7117ad7c919182b9b30152408e4071ce
+  - version: 1.24.1
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 5d76e78009018e5bde3154c49cbe6af46dc28b35
+  - version: 1.25.0
+    projects:
+      - repo: openstack/oslo.policy
+        hash: 864042c23edad75d26c918bcb23d9f6da3127dcd
 branches:
-- name: stable/pike
-  location: 1.25.0
+  - name: stable/pike
+    location: 1.25.0
