--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -1,34 +1,34 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: oslo.versionedobjects
 release-model: cycle-with-intermediary
 team: oslo
 type: library
 releases:
-- version: 1.22.0
-  projects:
-  - repo: openstack/oslo.versionedobjects
-    hash: cd3573ea1fcc4a82d104103da338dab8b1d0a91c
-- version: 1.23.0
-  projects:
-  - repo: openstack/oslo.versionedobjects
-    hash: d0376d8e3bf823d905b50f185b4d9e1ffcc59c4e
-- version: 1.24.0
-  projects:
-  - repo: openstack/oslo.versionedobjects
-    hash: a94c060e490521caa50dc2deabc2b3a9e72e6990
-- version: 1.25.0
-  projects:
-  - repo: openstack/oslo.versionedobjects
-    hash: ec05ef405d666f46c6c6b9372edf75d510cab6db
-- version: 1.25.1
-  projects:
-  - repo: openstack/oslo.versionedobjects
-    hash: dcb1c0591912ac936951c220506192883f70ae76
-- version: 1.26.0
-  projects:
-  - repo: openstack/oslo.versionedobjects
-    hash: b65e47382e3219585a1654ca2be726e564ed95d5
+  - version: 1.22.0
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: cd3573ea1fcc4a82d104103da338dab8b1d0a91c
+  - version: 1.23.0
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: d0376d8e3bf823d905b50f185b4d9e1ffcc59c4e
+  - version: 1.24.0
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: a94c060e490521caa50dc2deabc2b3a9e72e6990
+  - version: 1.25.0
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: ec05ef405d666f46c6c6b9372edf75d510cab6db
+  - version: 1.25.1
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: dcb1c0591912ac936951c220506192883f70ae76
+  - version: 1.26.0
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: b65e47382e3219585a1654ca2be726e564ed95d5
 branches:
-- name: stable/pike
-  location: 1.26.0
+  - name: stable/pike
+    location: 1.26.0
