--- a/deliverables/pike/stevedore.yaml
+++ b/deliverables/pike/stevedore.yaml
@@ -1,30 +1,30 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: stevedore
 release-model: cycle-with-intermediary
 team: oslo
 type: library
 releases:
-- version: 1.21.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 4abadad814477059204e213c0f5e61a1cb4417af
-- version: 1.22.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 27500a3d9220405d57bfac4363c91de3d530e5b2
-- version: 1.23.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 91c2e418f5b2a3f9f638400a7005bead4ce5b26f
-- version: 1.24.0
-  projects:
-  - repo: openstack/stevedore
-    hash: 7357e8aef053cf3d7c3268a794f0d70c86c7ade1
-- version: 1.25.0
-  projects:
-  - repo: openstack/stevedore
-    hash: b18bd78569abd2633d6c87d60772cd1e8830f2ea
+  - version: 1.21.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 4abadad814477059204e213c0f5e61a1cb4417af
+  - version: 1.22.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 27500a3d9220405d57bfac4363c91de3d530e5b2
+  - version: 1.23.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 91c2e418f5b2a3f9f638400a7005bead4ce5b26f
+  - version: 1.24.0
+    projects:
+      - repo: openstack/stevedore
+        hash: 7357e8aef053cf3d7c3268a794f0d70c86c7ade1
+  - version: 1.25.0
+    projects:
+      - repo: openstack/stevedore
+        hash: b18bd78569abd2633d6c87d60772cd1e8830f2ea
 branches:
-- name: stable/pike
-  location: 1.25.0
+  - name: stable/pike
+    location: 1.25.0
